testsuite/bsc.mcd/Misc/EResetMux2.bsv.bsc-vcomp-out.expected
checking package dependencies
compiling EResetMux2.bsv
code generation for sysEResetMux2 starts
Error: "EResetMux2.bsv", line 11, column 3: (G0072)
  Input reset `sRstIn' of submodule `the_ifc' is instantiated with a dynamic
  expression. Input resets must be determined at compile time.
  During elaboration of `the_ifc' at "EResetMux2.bsv", line 11, column 3.
  During elaboration of `sysEResetMux2' at "EResetMux2.bsv", line 4, column 8.
